@@ -3,9 +3,6 @@ package Backend.Arm.Instruction;
 import Backend.Arm.Operand.ArmCPUReg;
 import Backend.Arm.Operand.ArmLabel;
 import Backend.Arm.Operand.ArmReg;
-import Backend.Riscv.Operand.RiscvCPUReg;
-import Backend.Riscv.Operand.RiscvLabel;
-import Backend.Riscv.Operand.RiscvReg;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -13,8 +10,9 @@ import java.util.LinkedHashSet;
 
 public class ArmCall extends ArmInstruction {
     public LinkedHashSet<ArmReg> usedRegs = new LinkedHashSet<>();
+
     public ArmCall(ArmLabel targetFunction) {
-        super(ArmCPUReg.getArmRetReg(), new ArrayList<>(Collections.singleton(targetFunction)));//修改了ra
+        super(ArmCPUReg.getArmRetReg(), new ArrayList<>(Collections.singleton(targetFunction)));
     }
 
     public void addUsedReg(ArmReg usedReg) {
@@ -27,6 +25,8 @@ public class ArmCall extends ArmInstruction {
 
     @Override
     public String toString() {
-        return "bl\t" + getOperands().get(0) + "\n";
+        // AArch64 function call format: bl <label>
+        // The 'bl' instruction automatically stores return address in x30 (LR)
+        return "bl\t" + getOperands().getFirst() + "\n";
     }
 }
