@@ -17,7 +17,17 @@ public class ArmCondMv extends ArmInstruction {
 
     @Override
     public String toString() {
-        return "mov" + ArmTools.getCondString(this.type) +
-                "\t" + getDefReg() + ",\t" + getOperands().get(0);
+        // For AArch64 compatibility, use CSEL instead of conditional MOV
+        // AArch64 CSEL format: csel rd, rn, rm, cond
+        // For conditional move: csel rd, rn, rd, cond (move rn to rd if condition true)
+        String condString = ArmTools.getCondString(this.type);
+        if (type == ArmTools.CondType.nope) {
+            // Unconditional move, use regular mov
+            return "mov\t" + getDefReg() + ",\t" + getOperands().getFirst();
+        } else {
+            // Conditional move using CSEL
+            return "csel\t" + getDefReg() + ",\t" + getOperands().getFirst() +
+                   ",\t" + getDefReg() + ",\t" + condString;
+        }
     }
 }
