@@ -1,11 +1,11 @@
 package Backend.Arm.Instruction;
 
-import Backend.Arm.Operand.ArmOperand;
 import Backend.Arm.Operand.ArmReg;
 import Backend.Arm.tools.ArmTools;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 
 /**
  * AArch64 Conditional Select and related instructions
@@ -24,18 +24,19 @@ public class ArmCsel extends ArmInstruction {
         cneg    // conditional negate (alias for csneg with same reg)
     }
     
-    private CselType type;
-    private ArmTools.CondType condition;
+    private final CselType type;
+    private final ArmTools.CondType condition;
 
+    // Constructor for 3-operand CSEL instructions (csel, csinc, csinv, csneg)
     public ArmCsel(ArmReg destReg, ArmReg trueReg, ArmReg falseReg, ArmTools.CondType condition, CselType type) {
         super(destReg, new ArrayList<>(Arrays.asList(trueReg, falseReg)));
         this.condition = condition;
         this.type = type;
     }
 
-    // Constructor for single-operand variants (cset, cinc, etc.)
+    // Constructor for 2-operand CSEL instructions (cset, cinc, cinv, cneg)
     public ArmCsel(ArmReg destReg, ArmReg sourceReg, ArmTools.CondType condition, CselType type) {
-        super(destReg, new ArrayList<>(Arrays.asList(sourceReg)));
+        super(destReg, new ArrayList<>(Collections.singletonList(sourceReg)));
         this.condition = condition;
         this.type = type;
     }
@@ -44,28 +45,72 @@ public class ArmCsel extends ArmInstruction {
         return condition;
     }
 
-    public CselType getType() {
+    public CselType getCselType() {
         return type;
+    }
+
+    /**
+     * Get the "true" register (first operand)
+     */
+    public ArmReg getTrueReg() {
+        return (ArmReg) getOperands().getFirst();
+    }
+
+    /**
+     * Get the "false" register (second operand, if exists)
+     */
+    public ArmReg getFalseReg() {
+        return getOperands().size() > 1 ? (ArmReg) getOperands().get(1) : null;
+    }
+
+    /**
+     * Check if this is a 3-operand CSEL instruction
+     */
+    public boolean isThreeOperand() {
+        return type == CselType.csel || type == CselType.csinc ||
+               type == CselType.csinv || type == CselType.csneg;
+    }
+
+    /**
+     * Check if this is an alias instruction (2-operand)
+     */
+    public boolean isAliasInstruction() {
+        return type == CselType.cset || type == CselType.csetm ||
+               type == CselType.cinc || type == CselType.cinv || type == CselType.cneg;
     }
 
     @Override
     public String toString() {
-        switch (type) {
-            case csel, csinc, csinv, csneg -> {
-                return type.toString() + "\t" + getDefReg() + ",\t" + getOperands().get(0) + ",\t" + 
-                       getOperands().get(1) + ",\t" + ArmTools.getCondString(condition);
-            }
-            case cset -> {
-                return "cset\t" + getDefReg() + ",\t" + ArmTools.getCondString(condition);
-            }
-            case csetm -> {
-                return "csetm\t" + getDefReg() + ",\t" + ArmTools.getCondString(condition);
-            }
-            case cinc, cinv, cneg -> {
-                return type.toString() + "\t" + getDefReg() + ",\t" + getOperands().get(0) + ",\t" + 
-                       ArmTools.getCondString(condition);
-            }
+        String condString = ArmTools.getCondString(this.condition);
+
+        // Handle 3-operand instructions
+        if (isThreeOperand()) {
+            return type + "\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" +
+                   getOperands().get(1) + ",\t" + condString;
         }
-        return null;
+
+        // Handle 2-operand alias instructions
+        switch (type) {
+            case cset:
+                // cset rd, cond (alias for csinc rd, wzr, wzr, cond)
+                return "cset\t" + getDefReg() + ",\t" + condString;
+            case csetm:
+                // csetm rd, cond (alias for csinv rd, wzr, wzr, cond)
+                return "csetm\t" + getDefReg() + ",\t" + condString;
+            case cinc:
+                // cinc rd, rn, cond (alias for csinc rd, rn, rn, invert(cond))
+                return "cinc\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" +
+                       ArmTools.getCondString(ArmTools.getRevCondType(condition));
+            case cinv:
+                // cinv rd, rn, cond (alias for csinv rd, rn, rn, invert(cond))
+                return "cinv\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" +
+                       ArmTools.getCondString(ArmTools.getRevCondType(condition));
+            case cneg:
+                // cneg rd, rn, cond (alias for csneg rd, rn, rn, invert(cond))
+                return "cneg\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" +
+                       ArmTools.getCondString(ArmTools.getRevCondType(condition));
+            default:
+                return type + "\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" + condString;
+        }
     }
 }
