@@ -2,9 +2,6 @@ package Backend.Arm.Instruction;
 
 import Backend.Arm.Operand.ArmReg;
 
-import java.util.ArrayList;
-import java.util.Collections;
-
 public class ArmFMv extends ArmMv {
     public ArmFMv(ArmReg from, ArmReg toReg) {
         super(from, toReg);
@@ -12,7 +9,7 @@ public class ArmFMv extends ArmMv {
 
     @Override
     public String toString() {
-        // ARMv8-A floating-point move
-        return "fmov\t" + getDefReg() + ",\t" + getOperands().get(0);
+        // AArch64 floating-point move between SIMD&FP registers
+        return "fmov\t" + getDefReg() + ",\t" + getOperands().getFirst();
     }
 }
