@@ -15,25 +15,25 @@ public class ArmFSw extends ArmInstruction {
 
     @Override
     public String toString() {
-        if (getOperands().get(2) instanceof ArmImm) {
-            ArmImm imm = (ArmImm) getOperands().get(2);
+        if (getOperands().get(2) instanceof ArmImm imm) {
             if (imm.getValue() == 0) {
-                // ARMv8-A floating-point store
-                return "str\t" + getOperands().get(0) + ",\t[" + getOperands().get(1) + "]";
+                // AArch64 floating-point store with zero offset
+                return "str\t" + getOperands().getFirst() + ",\t[" + getOperands().get(1) + "]";
             } else {
                 // AArch64 floating-point store offset range: 0 to +32760, multiple of 8
                 int offset = imm.getValue();
                 if (offset >= 0 && offset <= 32760 && offset % 8 == 0) {
-                    return "str\t" + getOperands().get(0) + ",\t[" + getOperands().get(1) + ", " + getOperands().get(2) + "]";
+                    return "str\t" + getOperands().getFirst() + ",\t[" + getOperands().get(1) + ", " + getOperands().get(2) + "]";
                 } else {
-                    // For invalid offsets, use temporary register
+                    // For invalid offsets, use temporary register approach
                     return "mov\tx16,\t#" + offset + "\n" +
                            "\tadd\tx16,\t" + getOperands().get(1) + ",\tx16\n" +
-                           "\tstr\t" + getOperands().get(0) + ",\t[x16]";
+                           "\tstr\t" + getOperands().getFirst() + ",\t[x16]";
                 }
             }
         } else {
-            return "str\t" + getOperands().get(0) + ",\t[" + getOperands().get(1) + ", " + getOperands().get(2) + "]";
+            // Register offset mode: str Dt, [Xn, Xm]
+            return "str\t" + getOperands().getFirst() + ",\t[" + getOperands().get(1) + ", " + getOperands().get(2) + "]";
         }
     }
 }
