@@ -14,10 +14,10 @@ public class ArmLoad extends ArmInstruction {
 
     @Override
     public String toString() {
-        if (getOperands().get(1) instanceof ArmImm) {
-            ArmImm imm = (ArmImm) getOperands().get(1);
+        if (getOperands().get(1) instanceof ArmImm imm) {
             if (imm.getValue() == 0) {
-                return "ldr\t" + getDefReg() + ",\t[" + getOperands().get(0) + "]";
+                // AArch64 zero offset: ldr x0, [x1]
+                return "ldr\t" + getDefReg() + ",\t[" + getOperands().getFirst() + "]";
             } else {
                 // AArch64 ldr immediate offset range check
                 // Unscaled: -256 to +255
@@ -26,21 +26,22 @@ public class ArmLoad extends ArmInstruction {
                 
                 // Check unscaled immediate range
                 if (offset >= -256 && offset <= 255) {
-                    return "ldr\t" + getDefReg() + ",\t[" + getOperands().get(0) + ", " + getOperands().get(1) + "]";
+                    return "ldr\t" + getDefReg() + ",\t[" + getOperands().getFirst() + ", " + getOperands().get(1) + "]";
                 }
                 // Check scaled immediate range (assuming 8-byte alignment for 64-bit)
                 else if (offset >= 0 && offset <= 32760 && offset % 8 == 0) {
-                    return "ldr\t" + getDefReg() + ",\t[" + getOperands().get(0) + ", " + getOperands().get(1) + "]";
+                    return "ldr\t" + getDefReg() + ",\t[" + getOperands().getFirst() + ", " + getOperands().get(1) + "]";
                 }
                 // For large offsets, use temporary register x16
                 else {
                     return "mov\tx16,\t#" + offset + "\n" +
-                           "\tadd\tx16,\t" + getOperands().get(0) + ",\tx16\n" +
+                           "\tadd\tx16,\t" + getOperands().getFirst() + ",\tx16\n" +
                            "\tldr\t" + getDefReg() + ",\t[x16]";
                 }
             }
         } else {
-            return "ldr\t" + getDefReg() + ",\t[" + getOperands().get(0) + ", " + getOperands().get(1) + "]";
+            // Register offset mode: ldr Rt, [Xn, Xm]
+            return "ldr\t" + getDefReg() + ",\t[" + getOperands().getFirst() + ", " + getOperands().get(1) + "]";
         }
     }
 }
