@@ -1,7 +1,6 @@
 package Backend.Arm.Instruction;
 
 import Backend.Arm.Operand.ArmImm;
-import Backend.Arm.Operand.ArmOperand;
 import Backend.Arm.Operand.ArmReg;
 
 import java.util.ArrayList;
@@ -12,7 +11,7 @@ import java.util.Collections;
  * Efficient for loading large negative numbers
  */
 public class ArmMovn extends ArmInstruction {
-    private int shiftAmount;
+    private final int shiftAmount;
 
     public ArmMovn(ArmImm immediate, ArmReg destReg, int shiftAmount) {
         super(destReg, new ArrayList<>(Collections.singletonList(immediate)));
@@ -26,9 +25,11 @@ public class ArmMovn extends ArmInstruction {
     @Override
     public String toString() {
         if (shiftAmount == 0) {
-            return "movn\t" + getDefReg() + ",\t" + getOperands().get(0);
+            // AArch64: movn Xd, #imm16
+            return "movn\t" + getDefReg() + ",\t" + getOperands().getFirst();
         } else {
-            return "movn\t" + getDefReg() + ",\t" + getOperands().get(0) + ",\tlsl #" + shiftAmount;
+            // AArch64: movn Xd, #imm16, lsl #shift (shift can be 0, 16, 32, 48)
+            return "movn\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\tlsl #" + shiftAmount;
         }
     }
 }
