@@ -1,6 +1,5 @@
 package Backend.Arm.Instruction;
 
-import Backend.Arm.Operand.ArmOperand;
 import Backend.Arm.Operand.ArmReg;
 
 import java.util.ArrayList;
@@ -8,8 +7,8 @@ import java.util.Arrays;
 
 /**
  * AArch64 high-multiply instructions
- * smulh: signed multiply high
- * umulh: unsigned multiply high
+ * smulh: signed multiply high (64×64=128, returns high 64 bits)
+ * umulh: unsigned multiply high (64×64=128, returns high 64 bits)
  */
 public class ArmMulh extends ArmInstruction {
     public enum MulhType {
@@ -17,7 +16,7 @@ public class ArmMulh extends ArmInstruction {
         umulh   // unsigned multiply high
     }
     
-    private MulhType type;
+    private final MulhType type;
 
     public ArmMulh(ArmReg destReg, ArmReg leftReg, ArmReg rightReg, MulhType type) {
         super(destReg, new ArrayList<>(Arrays.asList(leftReg, rightReg)));
@@ -26,6 +25,6 @@ public class ArmMulh extends ArmInstruction {
 
     @Override
     public String toString() {
-        return type.toString() + "\t" + getDefReg() + ",\t" + getOperands().get(0) + ",\t" + getOperands().get(1);
+        return type.toString() + "\t" + getDefReg() + ",\t" + getOperands().getFirst() + ",\t" + getOperands().get(1);
     }
 }
