@@ -5,6 +5,10 @@ import Backend.Arm.Operand.ArmReg;
 import java.util.ArrayList;
 import java.util.Collections;
 
+/**
+ * AArch64 move instruction
+ * mov: register to register move operation
+ */
 public class ArmMv extends ArmInstruction {
     public ArmMv(ArmReg from, ArmReg toReg) {
         super(toReg, new ArrayList<>(Collections.singletonList(from)));
@@ -12,6 +16,6 @@ public class ArmMv extends ArmInstruction {
 
     @Override
     public String toString() {
-        return "mov\t" + getDefReg() + ",\t" + getOperands().get(0);
+        return "mov\t" + getDefReg() + ",\t" + getOperands().getFirst();
     }
 }
